# proxy-smart

./: .gitignore  Dockerfile  Dockerfile.keycloak  Dockerfile.mono  ELYSIA_OPENAPI_REFERENCE_ISSUE.md  PROXY_SMART_DEV_PLAN.md  README.md  application_result.json  bunfig.toml  docker-compose.development.yml  docker-compose.yml  eslint.config.js  implementation_plan.json  implementation_targets.json  openapitools.json  package-lock.json  package.json  proposed_implementation.json  reviewed_implementation.json
mcp-server/: .dockerignore  .env.example  .gitignore  CLAUDE_DESKTOP_SETUP.md  Dockerfile  MCP_MIGRATION_STATUS.md  README.md  openapi-generator-config.json  pyproject.toml  run.py  test_claude_integration.py  test_function_calling.py  test_mcp_integration.py
mcp-server/scripts/: generate_jwt_keypair.py
mcp-server/src/: __init__.py  backend_mcp_server.py  backend_mcp_server_generated.py  config.py  generate_mcp_tools.py  main.py
mcp-server/src/api_client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py
mcp-server/src/api_client/.openapi-generator/: FILES
mcp-server/src/api_client/api_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
mcp-server/src/api_client/docs/: AdminApi.md  AiApi.md  AuthenticationApi.md  AuthorizationDetail.md  BadRequestError.md  ClientRegistrationRequest.md  ClientRegistrationResponse.md  CreateIdentityProviderRequest.md  CreateSmartAppRequest.md  DeleteAdminRolesByRoleName200Response.md  ErrorResponse.md  ExportResponse.md  FhirApi.md  FhirServer.md  FhirServerDetails.md  FhirServerInfo.md  FhirServerInfo1.md  FhirServerList.md  FhirServerListServersInner.md  FhirServerMetadata.md  GetAdminClientRegistrationSettings200Response.md  GetAdminHealthcareUsers200ResponseInner.md  GetAdminHealthcareUsersLimitParameter.md  GetAdminHealthcareUsersOffsetParameter.md  GetAdminIdps200ResponseInner.md  GetAdminIdpsCount200Response.md  GetAdminKeycloakConfigStatus200Response.md  GetAdminLaunchContexts200ResponseInner.md  GetAdminRoles200ResponseInner.md  GetAdminSmartApps200ResponseInner.md  GetAiHealth503Response.md  GetAuthConfig200Response.md  GetAuthConfig200ResponseKeycloak.md  GetAuthIdentityProviders200ResponseInner.md  GetAuthUserinfo200Response.md  GetAuthUserinfo401Response.md  (+99 more)
mcp-server/src/models/: __init__.py  schemas.py
mcp-server/src/services/: __init__.py  ai_assistant.py  auth.py  backend_mcp_client.py  backend_tools.py  conversation_store.py  keycloak_auth.py  knowledge_base.py
mcp-server/test/: README.md  conftest.py  pyproject.toml  run_tests.py  test_ai_assistant_auth.py  test_authentication_middleware.py  test_authentication_validated.py  test_integration_e2e.py  test_server_composition.py  test_streamable_http_transport.py  test_utils.py
mcp-server/tests/: test_ai_assistant.py
(+838 files in other folders)
