[project]
name = "proxy-smart-mcp-tests"
version = "0.0.1-alpha"
description = "Test suite for Proxy Smart MCP Server"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.28.1",
    "pyjwt>=2.10.0",
    "cryptography>=46.0.0",
    "fastmcp>=2.0.0",
    "pydantic>=2.10.3",
    "python-dateutil>=2.8.2",
    "anyio>=4.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "integration: marks tests as integration tests (require running server)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "auth: marks tests that require authentication",
    "validated_auth: marks tests that require JWT validation",
    "require_backend: marks tests that require backend API to be running",
]
